--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,214 @@
-﻿<Window x:Class="ImageReviewer.MainWindow"
+<Window x:Class="ImageReviewer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:ImageReviewer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Image Reviewer"
+        Height="1200" Width="800"
+        WindowStartupLocation="CenterScreen"
+        Icon="/app.ico"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{DynamicResource MaterialDesignPaper}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        FontFamily="{materialDesign:MaterialDesignFont}">
+    
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Orange"/>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
 
+            <Style x:Key="ModernButton" TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+                <Setter Property="Padding" Value="16,8"/>
+                <Setter Property="materialDesign:ButtonAssist.CornerRadius" Value="4"/>
+            </Style>
+
+            <Style x:Key="ModernTextBox" TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+                <Setter Property="Padding" Value="8,4"/>
+                <Setter Property="materialDesign:TextFieldAssist.TextFieldCornerRadius" Value="4"/>
+            </Style>
+
+            <Style x:Key="CircularProgressBar" TargetType="ProgressBar" BasedOn="{StaticResource MaterialDesignCircularProgressBar}">
+                <Setter Property="Width" Value="40"/>
+                <Setter Property="Height" Value="40"/>
+            </Style>
+        </ResourceDictionary>
+    </Window.Resources>
+
+    <Grid Background="#F0F0F0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Linke Seite -->
+        <Grid Margin="16,16,8,16">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="150"/>
+            </Grid.RowDefinitions>
+
+            <!-- Ordnerpfad und Button -->
+            <DockPanel Grid.Row="0" Margin="0,0,0,16">
+                <Button x:Name="btnSelectFolder" 
+                        Content="Ordner wählen" 
+                        Margin="4"
+                        Width="120"
+                        DockPanel.Dock="Left"
+                        Style="{StaticResource ModernButton}"/>
+                <TextBox x:Name="txtCurrentPath" 
+                         IsReadOnly="True" 
+                         Margin="8,0,0,0"
+                         Style="{StaticResource ModernTextBox}"/>
+            </DockPanel>
+
+            <!-- Hauptbild -->
+            <Border Grid.Row="1" Background="White" CornerRadius="4"
+                    Margin="0,0,0,16"
+                    Effect="{DynamicResource MaterialDesignShadowDepth1}">
+                <Grid>
+                    <Image x:Name="imgMain"
+                           Stretch="Uniform"
+                           RenderOptions.BitmapScalingMode="HighQuality"
+                           Margin="8"/>
+                    <Grid x:Name="loadingGrid" Visibility="Collapsed">
+                        <Rectangle Fill="#80FFFFFF"/>
+                        <ProgressBar Style="{StaticResource MaterialDesignCircularProgressBar}"
+                                   Value="0"
+                                   IsIndeterminate="True"
+                                   Width="48"
+                                   Height="48"/>
+                    </Grid>
+                </Grid>
+            </Border>
+
+            <!-- Filmstreifen -->
+            <ListView x:Name="lvFilmstrip" Grid.Row="2" 
+                      ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                      ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                      BorderThickness="0"
+                      Background="White">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="4">
+                            <Border x:Name="imageBorder" 
+                                    Width="100" 
+                                    Height="100" 
+                                    Margin="2"
+                                    BorderThickness="2"
+                                    BorderBrush="Transparent">
+                                <Image Source="{Binding Image}" 
+                                       Stretch="Uniform"
+                                       RenderOptions.BitmapScalingMode="HighQuality"/>
+                            </Border>
+                            <TextBlock Text="{Binding FileName}" 
+                                       HorizontalAlignment="Center"
+                                       TextWrapping="Wrap"
+                                       MaxWidth="100"
+                                       Margin="0,4,0,0"/>
+                        </StackPanel>
+                        <DataTemplate.Triggers>
+                            <DataTrigger Binding="{Binding IsSelected}" Value="True">
+                                <Setter TargetName="imageBorder" Property="BorderBrush" Value="#FF9800"/>
+                            </DataTrigger>
+                        </DataTemplate.Triggers>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+
+        <!-- Rechte Seite -->
+        <Grid Grid.Column="1" Margin="8,16,16,16">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <!-- Ausgewählte Bilder -->
+            <Border Background="White" CornerRadius="4"
+                    Effect="{DynamicResource MaterialDesignShadowDepth1}">
+                <ScrollViewer Margin="8">
+                    <ItemsControl x:Name="selectedImagesControl" Margin="4">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <UniformGrid Columns="3"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="4">
+                                    <Border x:Name="imageBorder" 
+                                            Background="#F5F5F5" 
+                                            Width="80" Height="80"
+                                            CornerRadius="4"
+                                            Margin="2"
+                                            MouseEnter="Image_MouseEnter"
+                                            MouseLeave="Image_MouseLeave">
+                                        <Image Source="{Binding Image}" 
+                                               Stretch="Uniform"
+                                               RenderOptions.BitmapScalingMode="HighQuality"/>
+                                    </Border>
+                                    <Popup x:Name="imagePopup" 
+                                           AllowsTransparency="True" 
+                                           Placement="Right"
+                                           PlacementTarget="{Binding ElementName=imageBorder}"
+                                           IsOpen="False">
+                                        <Border Background="White" 
+                                                BorderBrush="#2196F3" 
+                                                BorderThickness="2" 
+                                                CornerRadius="4"
+                                                Effect="{DynamicResource MaterialDesignShadowDepth2}">
+                                            <Image Source="{Binding OriginalImage}" 
+                                                   MaxHeight="600" 
+                                                   MaxWidth="800"
+                                                   Stretch="Uniform"
+                                                   Margin="4"
+                                                   RenderOptions.BitmapScalingMode="HighQuality"/>
+                                        </Border>
+                                    </Popup>
+                                </Grid>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </ScrollViewer>
+            </Border>
+
+            <!-- Export-Bereich -->
+            <Border Grid.Row="1" Background="White" Margin="0,16,0,0" CornerRadius="4"
+                    Effect="{DynamicResource MaterialDesignShadowDepth1}">
+                <StackPanel Margin="16">
+                    <TextBlock Text="Zielordner:" 
+                               Margin="0,0,0,8"
+                               Style="{StaticResource MaterialDesignTextBlock}"/>
+                    <DockPanel Margin="0,0,0,16">
+                        <Button x:Name="btnSelectExportFolder" 
+                                Content="..." 
+                                DockPanel.Dock="Right" 
+                                Margin="8,0,0,0"
+                                Width="40" 
+                                Style="{StaticResource ModernButton}"/>
+                        <TextBox x:Name="txtExportPath" 
+                                 IsReadOnly="True"
+                                 Style="{StaticResource ModernTextBox}"/>
+                    </DockPanel>
+                    <Button x:Name="btnExport" 
+                            Content="Markierte Bilder exportieren"
+                            Style="{StaticResource ModernButton}"/>
+                </StackPanel>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
