More Design Work

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -61,7 +61,7 @@
                 <Button x:Name="btnSelectFolder" 
                         Content="Ordner wählen" 
                         Margin="4"
-                        Width="120"
+                        Width="130"
                         DockPanel.Dock="Left"
                         Style="{StaticResource ModernButton}"/>
                 <TextBox x:Name="txtCurrentPath" 
@@ -95,7 +95,8 @@
                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
                       ScrollViewer.VerticalScrollBarVisibility="Disabled"
                       BorderThickness="0"
-                      Background="White">
+                      Background="White"
+                      Height="150">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Horizontal"/>
@@ -109,16 +110,20 @@
                                     Height="100" 
                                     Margin="2"
                                     BorderThickness="2"
-                                    BorderBrush="Transparent">
+                                    BorderBrush="Transparent"
+                                    Background="#F5F5F5">
                                 <Image Source="{Binding Image}" 
                                        Stretch="Uniform"
-                                       RenderOptions.BitmapScalingMode="HighQuality"/>
+                                       RenderOptions.BitmapScalingMode="HighQuality"
+                                       Margin="4"/>
                             </Border>
                             <TextBlock Text="{Binding FileName}" 
                                        HorizontalAlignment="Center"
-                                       TextWrapping="Wrap"
+                                       TextWrapping="NoWrap"
                                        MaxWidth="100"
-                                       Margin="0,4,0,0"/>
+                                       TextTrimming="CharacterEllipsis"
+                                       Margin="0,4,0,0"
+                                       FontSize="11"/>
                         </StackPanel>
                         <DataTemplate.Triggers>
                             <DataTrigger Binding="{Binding IsSelected}" Value="True">
@@ -127,6 +132,14 @@
                         </DataTemplate.Triggers>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Padding" Value="0"/>
+                        <Setter Property="Margin" Value="0"/>
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="BorderThickness" Value="0"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
             </ListView>
         </Grid>
 
@@ -140,11 +153,15 @@
             <!-- Ausgewählte Bilder -->
             <Border Background="White" CornerRadius="4"
                     Effect="{DynamicResource MaterialDesignShadowDepth1}">
-                <ScrollViewer Margin="8">
-                    <ItemsControl x:Name="selectedImagesControl" Margin="4">
+                <ScrollViewer Margin="8" VerticalScrollBarVisibility="Auto">
+                    <ItemsControl x:Name="selectedImagesControl"
+                                VerticalAlignment="Top"
+                                HorizontalAlignment="Left">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
-                                <UniformGrid Columns="3"/>
+                                <UniformGrid Columns="3" 
+                                           VerticalAlignment="Top"
+                                           HorizontalAlignment="Left"/>
                             </ItemsPanelTemplate>
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
